<resources>
    <string name="content_authority">com.example.android.popularmovies2</string>
    <string name="app_name">Popular Movies 2</string>

    <string name="action_most_popular">Most popular</string>
    <string name="action_highest_rated">Highest rated</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_refresh">Refresh</string>

    <string name="error_message">An error has occurred. Please try again by clicking Refresh</string>
    <string name="error_no_connection">An error has occurred. No internet connection</string>
    <string name="info_no_data">No data to display</string>
    <string name="movie_as_favorite">Movie marked as favorite</string>
    <string name="movie_as_no_favorite">Movie removed as favorite</string>

    <string name="movie_poster">Movie poster</string>
    <string name="release_date">Release date:</string>
    <string name="vote_average">Vote average:</string>
    <string name="overview">Overview:</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="movie_video">Movie video</string>
    <string name="author">Author:</string>
    <string name="mark_as_favorite">Mark as favorite</string>

</resources>
