<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_most_popular"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/action_most_popular" />
    <item android:id="@+id/action_highest_rated"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/action_highest_rated" />
    <item android:id="@+id/action_favorites"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/action_favorites" />
    <item android:id="@+id/action_refresh"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_refresh" />
</menu>